pp/PP_Client_Private.h

/******************************************************************************/
/* Critical section management                                                */
/******************************************************************************/

/*
 * This function has to be called before entering in critical section.
 * Don't forget to call "exitCriticalSection()" after critical section.
 */
void enterCriticalSection(void);
/*
 * This function has to be called at the end of a critical section.
 */
void exitCriticalSection(void);
/******************************************************************************/
/* WARNING !!! Following function has to be used after a first call of        */
/* "enterCriticalSection()". Don't forget to call "exitCriticalSection()" when*/
/* you finish to use these functions.                                         */
/******************************************************************************/

/*
 * \brief Returns the number of pending commands for a unit. Only units
 *        controled by the player can give this data.
 * \param unit: unit to consult.
 * \return the number of pending commands of this unit. Negative value is
 *         returned on errors.
 */
int PP_Unit_GetNumPdgCmds_prim(PP_Unit unit);
/*
 * \brief Sets the nth pending command code of a unit. Only units controled
 *        by the player can give this data.
 * \param unit: unit to consult.
 * \param idCmd: id of the pending command of unit "unit", must be included
 *        meanwhile [0;n[ where n is the number of pending commands of this
 *        unit.
 * \param cmdCode points to the Integer that will be filled in. It doesn't need
 *        to be set before calling this, but it must be allocated in memory.
 * \return 0 on success. Negative value is returned on errors.
 */
int PP_Unit_PdgCmd_GetCode_prim(PP_Unit unit, int idCmd, int * cmdCode);
/*
 * \brief Returns the number of parameters of the nth pending command code of a
 *        unit. Only units controled by the player can give this data.
 * \param unit: unit to consult.
 * \param idCmd: id of the pending command of unit "unit", must be included
 *        meanwhile [0;n[ where n is the number of pending commands of this
 *        unit.
 * \return number of parameters of command at the specified index on success.
 *         Negative value is returned on errors.
 */
int PP_Unit_PdgCmd_GetNumParams_prim(PP_Unit unit, int idCmd);
/*
 * \brief Sets the nth parameter of a pending command code of a unit. Only units
 *        controled by the player can give this data.
 * \param unit: unit to consult.
 * \param idCmd: id of the pending command of unit "unit", must be included
 *        meanwhile [0;n[ where n is the number of pending commands of this
 *        unit.
 * \param idParam: id of the parameter of the command identified by "idCmd",
 *        must be included meanwhile [0;n[ where n is the number of parameters
 *        for this pending command of this unit.
 * \param paramValue points to the float that will be filled in. It doesn't need
 *        to be set before calling this, but it must be allocated in memory.
 * \return 0 on success. Negative value is returned on errors.
 */
int PP_Unit_PdgCmd_GetParam_prim(PP_Unit unit, int idCmd, int idParam,
		float * paramValue);
/*
 * \brief Push a message to the game engine in order to write it into log file
 * \param msg: message to log.
 * \param error: error code to log provided by other functions of this library.
 *        If the error code is a positive or null value, the error code will be
 *        ignored
 * \return 0 is returned on success. Negative value is returned on errors.
 */
int PP_PushMessage_prim(const char * msg, const int * error);