pp/PP_Error.h

/**
 * \brief Provides last error generated by Prog&Play API.
 *
 * \return the last error set as a string ended by NULL. This string is
 * statically allocated and hasn't to be freed by the user.
 */
char * PP_GetError(void);
/**
 * \brief Cleans the last error.
 *
 * Deletes all informations from the last internal error. Useful if error has
 * been processed.
 */
void PP_ClearError(void);